samples/_failures_safe/1761661446_25a00a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0874349c.c: In function ‘main’:
./samples/SAFE/__tmp_0874349c.c:164:5: error: expected identifier at end of input
  164 |     graph.edges[4].
      |     ^~~~~
./samples/SAFE/__tmp_0874349c.c:164:5: error: expected declaration or statement at end of input
